<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>es.caib.helium</groupId>
		<artifactId>helium-mvc-service-bom</artifactId>
		<version>1.0</version>
	</parent>

	<artifactId>helium-integracio-service</artifactId>
	<version>1.0.0</version>

	<properties>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<regweb3.version>3.1.2</regweb3.version>
	</properties>

	<dependencies>
		<!-- <dependency> -->
		<!-- <groupId>org.springframework.boot</groupId> -->
		<!-- <artifactId>spring-boot-starter-web-services</artifactId> -->
		<!-- </dependency> -->
		<!-- <dependency> -->
		<!-- <groupId>org.springframework.ws</groupId> -->
		<!-- <artifactId>spring-ws-security</artifactId> -->
		<!-- </dependency> -->
		<!-- <dependency> -->
		<!-- <groupId>org.apache.ws.security</groupId> -->
		<!-- <artifactId>wss4j</artifactId> -->
		<!-- <version>1.6.19</version> -->
		<!-- </dependency> -->


		<!-- <dependency> -->
		<!-- <groupId>com.hazelcast</groupId> -->
		<!-- <artifactId>hazelcast</artifactId> -->
		<!-- </dependency> -->
		<!-- <dependency> -->
		<!-- <groupId>com.hazelcast</groupId> -->
		<!-- <artifactId>hazelcast-eureka-one</artifactId> -->
		<!-- <version>2.0.1</version> -->
		<!-- </dependency> -->
		<dependency>
			<groupId>com.oracle.database.jdbc</groupId>
			<artifactId>ojdbc10</artifactId>
			<scope>runtime</scope>
		</dependency>

		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.ldap</groupId>
			<artifactId>spring-ldap-core</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-configuration-processor</artifactId>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-webflux</artifactId>
		</dependency>
		<dependency>
			<groupId>es.caib.notib</groupId>
			<artifactId>notib-client</artifactId>
			<version>1.1.10</version>
		</dependency>
		<dependency>
			<artifactId>dir3caib-ws-api</artifactId>
			<groupId>es.caib.dir3caib</groupId>
			<version>1.0.9</version>
		</dependency>
		<dependency>
			<groupId>javax.xml.ws</groupId>
			<artifactId>jaxws-api</artifactId>
		</dependency>
		<dependency>
			<groupId>com.sun.xml.ws</groupId>
			<artifactId>rt</artifactId>
			<version>2.3.1</version>
		</dependency>
		<dependency>
			<groupId>es.caib</groupId>
			<artifactId>sistra-wsdl</artifactId>
			<version>1.1.0</version>
			<scope>system</scope>
			<systemPath>${basedir}/../../helium-webapp/src/main/webapp/WEB-INF/lib/sistra-wsdl-1.1.0.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>org.apache.cxf</groupId>
			<artifactId>cxf-rt-frontend-jaxws</artifactId>
			<version>3.4.3</version>
		</dependency>
		<dependency>
			<groupId>org.apache.cxf</groupId>
			<artifactId>cxf-rt-transports-http</artifactId>
			<version>3.4.3</version>
		</dependency>
		<dependency>
			<groupId>org.apache.cxf</groupId>
			<artifactId>cxf-rt-ws-security</artifactId>
			<version>3.4.3</version>
		</dependency>
		<dependency>
			<groupId>org.fundaciobit.plugins</groupId>
			<artifactId>plugin-signatureserver-api</artifactId>
			<version>2.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.fundaciobit.plugins</groupId>
			<artifactId>plugin-signatureserver-portafib</artifactId>
			<version>2.0.0</version>
		</dependency>
		<dependency>
			<groupId>es.caib.portafib</groupId>
			<artifactId>portafib-ws-api</artifactId>
			<version>1.1</version>
		</dependency>
		<dependency>
			<groupId>es.caib</groupId>
			<artifactId>portasignatures-wsdl</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${basedir}/../../helium-webapp/src/main/webapp/WEB-INF/lib/portasignatures-wsdl.jar</systemPath>
		</dependency>

		<!-- S'HAURIA DE DEIXAR DE FER SERVIR UNA LLIBRERIA QUE NO ACTUALITZA DES DEL 2008 -->
		<dependency>
			<groupId>com.artofsolving</groupId>
			<artifactId>jodconverter</artifactId>
			<version>2.2.1</version>
		</dependency>
		
		
		<!--  plugin-validatesignature-afirmacxf 1.0.2 -->
		<dependency>
			<groupId>org.fundaciobit.plugins</groupId>
			<artifactId>plugin-validatesignature-api</artifactId>
			<version>1.0.0</version>
		</dependency>
		
		<dependency>
			<groupId>org.fundaciobit.plugins</groupId>
			<artifactId>plugin-validatesignature-afirmacxf</artifactId>
			<version>1.0.1</version>
			<exclusions>
				<exclusion>
					<groupId>xerces</groupId>
					<artifactId>xercesImpl</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.sun.xml.bind</groupId>
					<artifactId>jaxb-impl</artifactId>
				</exclusion>
				<exclusion>
					<groupId>xalan</groupId>
					<artifactId>xalan</artifactId>
				</exclusion>
<!-- 				<exclusion> -->
<!-- 					<groupId>org.slf4j</groupId> -->
<!-- 					<artifactId>log4j-over-slf4j</artifactId> -->
<!-- 				</exclusion> -->
<!-- 				<exclusion> -->
<!-- 					<groupId>org.slf4j</groupId> -->
<!-- 					<artifactId>jcl-over-slf4j</artifactId> -->
<!-- 				</exclusion> -->
				<exclusion>
					<groupId>org.apache.ws.security</groupId>
					<artifactId>wss4j</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.apache.santuario</groupId>
					<artifactId>xmlsec</artifactId>
				</exclusion>
				<exclusion>
					<groupId>log4j</groupId>
					<artifactId>log4j</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.lowagie</groupId>
					<artifactId>itext</artifactId>
				</exclusion>
				<exclusion>
					<groupId>commons-logging</groupId>
					<artifactId>commons-logging</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-api</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>jul-to-slf4j</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.bouncycastle</groupId>
					<artifactId>bcprov-jdk15</artifactId>
				</exclusion>
				<exclusion>
					<artifactId>bcmail-jdk16</artifactId>
					<groupId>org.bouncycastle</groupId>
				</exclusion>
				<exclusion>
					<artifactId>bcprov-jdk16</artifactId>
					<groupId>org.bouncycastle</groupId>
				</exclusion>
				<exclusion>
					<artifactId>bctsp-jdk16</artifactId>
					<groupId>org.bouncycastle</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		
<!-- 		LLibreria no actualitza des del 2006 s'hauria de canviar -->
		<dependency> 
			<groupId>axis</groupId>
			<artifactId>axis</artifactId>
			<version>1.4</version>
			<type>jar</type>
			<exclusions>
				<exclusion>
					<artifactId>axis-wsdl4j</artifactId>
					<groupId>axis</groupId>
				</exclusion>
				<!--  S'ha esborrat el javax.xml.namespace -->
<!-- 				<exclusion> -->
<!-- 					<artifactId>axis-jaxrpc</artifactId> -->
<!-- 					<groupId>axis</groupId> -->
<!-- 				</exclusion> -->
			</exclusions>
		</dependency>
		<dependency>
    		<groupId>org.apache.ws.security</groupId>
    		<artifactId>wss4j</artifactId>
    		<version>1.6.19</version>
		</dependency>
		
		<!--  Dependencies Regweb-ws -->	
		<dependency>
			<groupId>es.caib</groupId>
			<artifactId>regweb-ws</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${basedir}/../../helium-webapp/src/main/webapp/WEB-INF/lib/regweb-ws.jar</systemPath>
		</dependency>
		
		<!-- Dependencies REGWEB3 -->
		
		<!-- <dependency> -->
		<!-- <groupId>es.caib.regweb3</groupId> -->
		<!-- <artifactId>regweb3-utils</artifactId> -->
		<!-- <version>${regweb3.version}</version> -->
		<!-- <scope>compile</scope> -->
		<!-- <exclusions> -->
		<!-- <exclusion> -->
		<!-- <artifactId>spring-context</artifactId> -->
		<!-- <groupId>org.springframework</groupId> -->
		<!-- </exclusion> -->
		<!-- </exclusions> -->
		<!-- </dependency> -->
		<dependency>
			<groupId>es.caib.regweb3</groupId>
			<artifactId>regweb3-ws-api</artifactId>
			<version>${regweb3.version}</version>
			<scope>compile</scope>
		</dependency>
		<!-- <dependency> -->
		<!-- <groupId>wsdl4j</groupId> -->
		<!-- <artifactId>wsdl4j</artifactId> -->
		<!-- <version>1.6.2</version> -->
		<!-- </dependency> -->
		<!-- /Dependències REGWEB3 -->
		
		<!-- plugin-arxiu-caib 2.0.8 --> 
		<dependency>
			<groupId>org.fundaciobit.pluginsib.arxiu</groupId>
			<artifactId>pluginsib-arxiu-caib</artifactId>
			<version>2.0.13</version>
			<exclusions>
				<exclusion>
					<groupId>log4j</groupId>
					<artifactId>log4j</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- /plugin-arxiu-caib 2.0.8 --> 

		<!--  custodia -->
		<dependency>
			<groupId>es.caib</groupId>
			<artifactId>valcert-sar-axis</artifactId>
			<version>1.5</version>
			<scope>system</scope>
			<systemPath>${basedir}/../../helium-webapp/src/main/webapp/WEB-INF/lib/valcert-sar-axis-1.5-HELIUM.jar</systemPath>
		</dependency>
		<!-- /custodia -->

	</dependencies>
	<repositories>
		<repository>
			<id>github_governib_maven</id>
			<name>GitHub GovernIB Maven Repository</name>
			<url>file://${project.build.directory}/mvn-repo</url>
		</repository>
		<repository>
			<id>github-governib-maven-repos</id>
			<name>GitHub GovernIB Maven Repository</name>
			<url>https://governib.github.io/maven/maven/</url>
		</repository>
	</repositories>
</project>
